add 1.19.3 support (untested)

--- a/AtlasParent/pom.xml
+++ b/AtlasParent/pom.xml
@@ -59,6 +59,7 @@
         <module>Atlas_Compat_1_18</module>
         <module>Atlas_Compat_1_18_R2</module>
         <module>Atlas_Compat_1_19</module>
+        <module>Atlas_Compat_1_19_R2</module>
         <module>AtlasBukkit</module>
     </modules>
 
